# ai_lottory

./: .gitignore  CLAUDE.md  Cargo.toml  FRONTEND_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  index.html  package-lock.json  package.json  tasks.md  test.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/database/: lottery.db
src-tauri/database/migrations/: 001_initial.sql  003_performance_optimizations.sql
src-tauri/src/: main.rs
src-tauri/src/api/: performance.rs
src-tauri/src/cache/: manager.rs  mod.rs
src-tauri/src/commands/: analysis.rs  auth.rs  lottery.rs  mod.rs  predictions.rs
src-tauri/src/config/: error.rs  loader.rs  manager.rs  mod.rs  provider.rs  traits.rs  types.rs  validator.rs  watcher.rs
src-tauri/src/database/: connection.rs  health.rs  migrations.rs  mod.rs  performance.rs  query_optimizer.rs
src-tauri/src/database/migrations/: 001_create_users_table.sql  002_create_lottery_draws_table.sql
src-tauri/src/di/: container.rs  injection.rs  lifetime.rs  mod.rs  service_descriptor.rs  service_factory.rs  service_registry.rs
src-tauri/src/error/: context.rs  logger.rs  mod.rs  types.rs
src-tauri/src/errors/: super_lotto_error.rs
src-tauri/src/logging/: appender.rs  context.rs  error.rs  filter.rs  formatter.rs  logger.rs  metrics.rs  mod.rs  traits.rs
src-tauri/src/models/: analysis.rs  lottery.rs  mod.rs  user.rs
src-tauri/src/performance/: mod.rs  tracker.rs
src-tauri/src/plugins/: mod.rs  plugin_manager.rs  plugin_traits.rs
src-tauri/src/plugins/builtin/: mod.rs  neural_network.rs  pattern_analysis.rs  weighted_frequency.rs
src-tauri/src/repository/: base.rs  cache.rs  errors.rs  lottery.rs  mod.rs  queries.rs  traits.rs  transactions.rs
src-tauri/src/service/: base.rs  errors.rs  mod.rs  traits.rs
src-tauri/src/services/: analysis_service.rs  auth_service.rs  lottery_service.rs  mod.rs
src-tauri/src/stores/: auth.ts
src-tauri/src/super_lotto/: commands.rs  database.rs  errors.rs  mod.rs  models.rs  predictions.rs  services.rs  utils.rs  validation.rs
src-tauri/src/utils/: streaming.rs
src-tauri/tests/: auth_tests.rs
(+132 files in other folders)
