[package]
name = "ai-lottory"
version = "0.1.0"
description = "AI Lottery Prediction App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
pin-project = "1.1"
tokio-stream = "0.1"
async-stream = "0.3"

# Super Lotto specific dependencies
polars = { version = "0.39", features = ["lazy", "temporal", "strings"] }
nalgebra = "0.33"
statrs = "0.16"

# Caching dependencies
cached = "0.46"
async-trait = "0.1"

# Performance monitoring dependencies
metrics = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-metrics = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
